2002-09-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (require_variables): Search variable definitions
	in any condition implied by $cond.
	* tests/cond25.test: New file.
	* tests/Makefile.am (TESTS): Add cond25.test.
	Reported by Pavel Roskin.

	* tests/subobj9.test: Skip this test on configure errors.

2002-09-18  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.6e.

	* configure.in, NEWS: Bump version to 1.6d.
	* tests/libobj12.test, tests/libobj12b.test: Include ./defs,
	not $srcdir/defs.
	* tests/suffix8.test: Typo.

	* automake.in (check_ambiguous_conditional, rule_define): Issue
	syntactic warnings, not errors.
	(macro_define): Don't adjust the owner of a variable which is being
	appended in a condition different from its definition.
	(variable_output, variable_pretty_output): Make sure the
	requested condition exists.

	For PR automake/353: fill %var_location, %var_comment,
	%var_type, %var_owner for each condition.
	* automake.in (msg_cond_var): New function.
	(msg_var): Use it.
	(generate_makefile, process_option_list, handle_languages,
	handle_lib_objects_cond, handle_compile, handle_libtool,
	handle_ltlibraries, handle_texinfo_helper, handle_tests,
	handle_emacs_lisp, handle_python, macro_define, macro_delete,
	macro_dump, variable_assert, variable_output,
	variable_pretty_output, read_am_file, read_main_am_file,
	file_contents_internal, am_primary_prefixes,
	require_variables_for_macro): Adjust accesses to %var_location,
	%var_comment, %var_type, %var_owner.
	(append_comments, require_file_with_macro,
	require_conf_file_with_macro, require_variables): Add the
	$cond argument.
	* tests/comment7.test: New file.
	* tests/Makefile.am (TESTS): Add comment7.test.

2002-09-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/353:
	* automake.in (check_ambiguous_conditional): Display locations for
	the two definitions of the ambiguous variable.  Show the macro_dump