@@ -1,5 +1,9 @@
 2002-09-19  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (rule_define): Don't diagnose duplicate user rules.
+	* tests/phony.test, tests/percent2.test: New files.
+	* tests/Makefile.am (TESTS): Add them.
+
 	* automake.in (require_variables): Search variable definitions
 	in any condition implied by $cond.
 	* tests/cond25.test: New file.
